[gd_scene load_steps=17 format=2]

[ext_resource path="res://Enemies_Horde.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/1_stage_background.jpg" type="Texture" id=2]
[ext_resource path="res://resources/sfx_deathscream_human1.wav" type="AudioStream" id=3]
[ext_resource path="res://Blue_light.tscn" type="PackedScene" id=4]
[ext_resource path="res://Final_stage.gd" type="Script" id=5]
[ext_resource path="res://Laser_spawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://Ship.tscn" type="PackedScene" id=7]
[ext_resource path="res://resources/Loons_boss/boss_main_theme.mp3" type="AudioStream" id=8]
[ext_resource path="res://resources/Loons_boss/gael_loop.wav" type="AudioStream" id=9]
[ext_resource path="res://resources/Loons_boss/GAEL.wav" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
resource_name = "Fade"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 160, 90.3749 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "player_death"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "player_death_after_ultra_rage"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "the_end"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "ultra_rage"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}

[node name="Final_stage" type="Node"]
script = ExtResource( 5 )

[node name="1StageBackground" type="Sprite" parent="."]
position = Vector2( 160, 90.3749 )
scale = Vector2( 0.166406, 0.166666 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Transition" type="AnimationPlayer" parent="1StageBackground"]
autoplay = "Fade"
anims/Fade = SubResource( 1 )
anims/RESET = SubResource( 3 )
anims/player_death = SubResource( 6 )
anims/player_death_after_ultra_rage = SubResource( 7 )
anims/the_end = SubResource( 5 )
anims/ultra_rage = SubResource( 4 )

[node name="Blue_light" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 14, 90 )
z_index = 1

[node name="Laser_spawner" parent="." instance=ExtResource( 6 )]
position = Vector2( -1, 0 )

[node name="Death_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 9.862

[node name="boss_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -4.771
autoplay = true

[node name="Enemies_Horde" parent="." instance=ExtResource( 1 )]
position = Vector2( 320, 0 )

[node name="gael_loop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="gael" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="player_death" from="Player" to="." method="_on_Player_player_death"]
